Delete the skill, keep the pipeline
The deliverable stopped being a skill some time ago and became this: a pipeline that
implements the shape, and a dashboard that reads what it did. The repository had not been
told. AGENTS.md still opened seventeen problems about shipping bump-java-version as a
per-hop SKILL.md optimized by GEPA against a panel of off-the-shelf agents; README.md still
said the deliverable was one self-contained skill file that is read rather than executed.
Neither describes anything that runs here now.

Gone: attic (every previous attempt), conversations, tools, openhands_smoke.txt, AGENTS.md.
Nothing live referenced any of it. The Java does the scoring, the module detection and the
triage those scripts did, and it does them where the results are.

NOTHING WAS DESTROYED. Tracked files stay in history, and 4.9G of untracked residue moved to
~/bjv-archive rather than being deleted: the frozen attempts under history/, the old run
roots, twenty-six AGENTS.md backups and nine .env backups. Stale secrets in the working
directory of a public repository are worth ending on their own.

TWO THINGS ALMOST WENT THAT SHOULD NOT HAVE, and both were caught by asking what actually
references them rather than by what their names suggest. The top-level Dockerfile builds
bjv-alljdk, the sandbox image every lane runs through jvm-run, and scripts/ is COPYd into it
at /opt/scripts. A repository that looks like it is about a skill contains, at its root, the
two files the pipeline cannot run without.

corpus/ stays: the discovery lists are how new repositories enter the corpus, which is an
input to the thing being kept rather than a record of the thing being dropped.

README.md is rewritten as what AGENTS.md used to be, since the orientation document left with
it: what this is, the shape as the program prints it, the layout, how to run a sweep, why a
settled bump records which pipeline produced it, and what the dashboard shows.

320 green, fifteen lanes still running.

Co